# TheLastCityOnEarth

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/assimp-3.1.1/: assimp.exp
lib/assimp-3.1.1/win32/: assimp.lib
lib/assimp-3.1.1/win64/: assimp.exp  assimp.lib
lib/glfw-3.1.1/: glfw3.lib
lib/glfw-3.1.1/win64/: glfw3.lib
res/models/: enemyship.mtl
res/particles/: explosion.json  explosion.tga  explosion.txt  explosion_good.json  fire.tga  flash.tga  missile_explosion.json  round_spark.tga  round_sparks.tga  shield_hit.json  ship_explosion.json  shockwave.tga  smoke_trail.tga  spark.tga
res/shaders/: color.vert  common.frag  depth.vert  framebuffer.frag  framebuffer.vert  main.frag  main.vert  particles.frag  particles.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert  text.vert
res/textures/: Thumbs.db  alphabetTexture.psd  crosshairs.psd  crosshairs.tga
res/textures/skybox/: Thumbs.db
res/worlds/: Thumbs.db  heightmap.psd  newworld16.raw  real.raw  real.tif  world.psd  world.tga  world.xcf
src/: Camera.h  GameContext.cpp  GameContext.h  GameScreen.cpp  GameScreen.h  Lighting.h  OpenGLControl.cpp  OpenGLControl.h  Screen.h  ShaderUniforms.h  Shaders.cpp  Shaders.h  ShadowMapper.cpp  ShadowMapper.h  TestScreen.h  Texture.h  VBOindexer.cpp  VBOindexer.h  World.h  main.cpp
src/game/: World.cpp  World.h
src/game/renderables/: Mesh.cpp  Mesh.h  Renderable.cpp  Renderable.h
src/game/renderables/models/: Cannon.cpp  Cannon.h  EnemyShip.cpp  EnemyShip.h  Explosion.cpp  Explosion.h  ForceShield.cpp  ForceShield.h  Missile.cpp  Missile.h  ParticleEffect.cpp  ParticleEffect.h  PointLight.cpp  PointLight.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h
src/game/renderables/particles/: Particle.h  ParticleEffect.cpp  ParticleEffect.h  ParticleEmitter.cpp  ParticleEmitter.h
src/game/renderables/primitives/: Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h  Text.cpp  Text.h
src/renderables/: Renderable.cpp  Renderable.h
src/renderables/models/: Cannon.cpp  Cannon.h  EnemyShip.cpp  Explosion.h  ForceShield.cpp  Missile.h  PointLight.cpp  Skybox.h  Terrain.cpp
src/renderables/primitives/: Cube.h  Cylinder.cpp  Cylinder.h  Text.cpp
src/renderer/: Camera.cpp  Lighting.cpp  Lighting.h  Shaders.cpp  ShadowMapper.cpp  ShadowMapper.h  Texture.cpp  Texture.h  VertexBufferObject.cpp  VertexBufferObject.h  WorldRenderer.cpp  WorldRenderer.h
src/screens/: GameScreen.cpp  GameScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  Screen.h
src/sound/: SoundSystem.cpp  SoundSystem.h
